# Hickirik

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
dep/GLAD/: glad.c  glad.h
dep/GLFW/lib/cmake/glfw3/: glfw3ConfigVersion.cmake
dep/GLFW/lib/pkgconfig/: glfw3.pc
include/: Camera.hpp  DefaultDefinitons.hpp  Engine.hpp  GUI.hpp  Object2D.hpp  Object3D.hpp  ObjectCreator2D.hpp  ObjectCreator3D.hpp  ObjectManager2D.hpp  ObjectManager3D.hpp  ShaderProgram.hpp  VertexArray.hpp  VertexUtil.hpp  Window.hpp
shaders/: fragment.glsl  vertex.glsl
shaders/2D/: vertex.glsl
shaders/3D/: vertex.glsl
src/: Camera.cpp  Engine.cpp  GUI.cpp  Object2D.cpp  Object3D.cpp  ObjectCreator2D.cpp  ObjectCreator3D.cpp  ObjectManager2D.cpp  ObjectManager3D.cpp  ShaderProgram.cpp  VertexArray.cpp  Window.cpp  main.cpp
